--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   doc:
-    image: jekyll/jekyll:3.8
+    image: jekyll/jekyll
     volumes:
       - .:/srv/jekyll
     container_name: site
@@ -12,4 +12,4 @@ services:
       JEKYLL_UID: 1001
       JEKYLL_GID: 1001
     tty: true
-    command: bash -c "bundle install && bundle exec jekyll serve --host 0.0.0.0"
+    command: bash -c "bundle update && bundle exec jekyll serve --host 0.0.0.0"
