--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,7 @@ pwa:
   enabled: true # the option for PWA feature
 
 paginate: 10
+paginate_path: "/blog/page:num/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -141,7 +142,8 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      # permalink: /posts/:title/
+      permalink: /blog/:title/
   - scope:
       path: _drafts
     values:
@@ -192,3 +194,9 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-email-protect
+  - jekyll-seo-tag
